Center alignment Fixed

--- a/style.css
+++ b/style.css
@@ -195,8 +195,8 @@ background-size: cover; */
     /* gap: 24px; */
     margin-left: auto;
     margin-right: auto;
-    margin-top: 120px;
-    margin-bottom: 48px;
+    padding-top: 120px;
+    padding-bottom: 48px;
 }
 
 
@@ -286,6 +286,7 @@ text-align: center; */
     letter-spacing: 0em;
     text-align: center;
     color: #2D2D2D;
+    margin: 0;
 }
 
 .threeSectionsMainDiv {
@@ -575,6 +576,9 @@ flex-direction: column;
 align-items: center;
 justify-content: center;
 
+margin-left: auto;
+margin-right: auto;
+
 }
 .ourTeamHeading{
     /* font-family: Campton; */
@@ -645,6 +649,9 @@ flex-direction: column;
 align-items: center;
 justify-content: center;
 padding-bottom: 120px;
+
+margin-left: auto;
+margin-right: auto;
 }
 .advantagesHeading{
     /* font-family: Campton; */
